--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         // Función para mostrar la aceptación
         function mostrarAceptacion() {
-            alert("¡Gracias por aceptar! 💖");
+            alert("Jijiji, Yo sabía que ibas a aceptar ¡Te amo! 💖");
         }
 
         // Función para crear corazones de lluvia
