--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             display: flex;
             justify-content: center;
             gap: 10px;
+            position: relative;
         }
         button {
             background-color: #800080;
@@ -61,6 +62,7 @@
             background-color: #ff00ff;
         }
         #btnNo {
+            position: static; /* Cambiamos a posición estática */
             transition: all 0.5s ease;
         }
         .corazon-contenedor {
@@ -117,6 +119,16 @@
             }
             .mensaje {
                 padding: 0 10px;
+                font-size: 0.9rem; /* Ajustamos el tamaño del texto */
+                text-align: left; /* Alineamos el texto a la izquierda */
+            }
+            .botones {
+                flex-direction: column; /* Botones en columna en móviles */
+                align-items: center;
+            }
+            button {
+                width: 80%; /* Botones más anchos en móviles */
+                margin: 5px 0;
             }
         }
     </style>
@@ -180,6 +192,7 @@
             const nuevaX = Math.random() * (anchoVentana - btnNo.offsetWidth);
             const nuevaY = Math.random() * (altoVentana - btnNo.offsetHeight);
 
+            btnNo.style.position = 'absolute';
             btnNo.style.left = `${nuevaX}px`;
             btnNo.style.top = `${nuevaY}px`;
         }
