--- a/index.html
+++ b/index.html
@@ -8,60 +8,80 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #000000;
-            color: #ffffff;
+            background-color: #000000; /* Fondo negro */
+            color: #ffffff; /* Texto blanco */
             margin: 0;
             padding: 20px;
             position: relative;
             overflow: hidden;
         }
         h1 {
-            font-size: 2.5rem;
-            margin-top: 20px;
-            color: #ff4d4d;
+            font-size: 3rem;
+            margin-top: 50px;
+            color: #ff4d4d; /* Rojo claro */
         }
         .dedicatoria {
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             margin: 20px 0;
-            color: #ffd700;
+            color: #ffd700; /* Dorado */
         }
         .imagen-centrada {
-            max-width: 100%;
+            display: inline-block;
+            max-width: 100px; /* 10 centímetros */
             height: auto;
             border-radius: 10px;
-            margin: 10px 0;
+            margin: 10px;
         }
         .imagen-colage {
-            max-width: 100%;
+            max-width: 100px; /* 10 centímetros */
             height: auto;
             border-radius: 10px;
-            margin: 10px 0;
+            position: absolute;
         }
         .gifs {
-            width: 80px;
+            position: absolute;
+            width: 100px;
             height: auto;
-            margin: 10px;
+        }
+        .gif-top-left {
+            top: 10px;
+            left: 10px;
+        }
+        .gif-top-right {
+            top: 10px;
+            right: 10px;
+        }
+        .gif-bottom-left {
+            bottom: 10px;
+            left: 10px;
+        }
+        .gif-bottom-right {
+            bottom: 10px;
+            right: 10px;
         }
         .botones {
             margin: 20px 0;
-            display: flex;
-            justify-content: center;
-            gap: 10px;
+            position: relative;
         }
         button {
-            background-color: #800080;
+            background-color: #800080; /* Morado */
             color: white;
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            font-size: 1rem;
+            font-size: 1.2rem;
+            margin: 0 10px;
             cursor: pointer;
+            position: absolute;
         }
         button:hover {
-            background-color: #ff00ff;
+            background-color: #ff00ff; /* Rosa */
+        }
+        #btnSi {
+            position: static; /* El botón "Sí" se mantiene en su lugar */
         }
         #btnNo {
-            transition: all 0.5s ease;
+            transition: all 0.5s ease; /* Animación suave al moverse */
         }
         .corazon-contenedor {
             display: flex;
@@ -70,16 +90,38 @@
             margin: 20px 0;
         }
         .corazon, .ramo {
-            font-size: 3rem;
+            font-size: 5rem;
+            position: relative;
+        }
+        .corazon::before, .ramo::before {
+            content: '❤️';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            color: white;
+            animation: tejer 5s linear infinite;
+        }
+        .ramo::before {
+            content: '💐'; /* Ramo de flores */
+        }
+        @keyframes tejer {
+            0% { clip-path: polygon(0 0, 0 0, 0 0, 0 0); color: white; } /* Blanco */
+            25% { clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); color: #00ff00; } /* Verde */
+            50% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); color: #ffd700; } /* Dorado */
+            75% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); color: #800080; } /* Morado */
+            100% { clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); color: #ff0000; } /* Rojo */
         }
         .mensaje {
             text-align: justify;
             max-width: 800px;
             margin: 20px auto;
             padding: 0 20px;
+            position: relative;
         }
         .corazones-lluvia {
-            position: fixed;
+            position: absolute;
             top: 0;
             left: 0;
             width: 100%;
@@ -89,35 +131,13 @@
         }
         .corazon-lluvia {
             position: absolute;
-            color: #ff4d4d;
+            color: #ff4d4d; /* Rosa */
             font-size: 20px;
-            animation: lluvia 10s linear infinite;
+            animation: lluvia 10s linear infinite; /* Más lento */
         }
         @keyframes lluvia {
             0% { transform: translateY(-100%); }
             100% { transform: translateY(100vh); }
-        }
-
-        /* Media queries para móviles */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-            .dedicatoria {
-                font-size: 1rem;
-            }
-            .gifs {
-                width: 50px;
-            }
-            .imagen-colage {
-                max-width: 80%;
-            }
-            .corazon, .ramo {
-                font-size: 2rem;
-            }
-            .mensaje {
-                padding: 0 10px;
-            }
         }
     </style>
 </head>
@@ -126,7 +146,7 @@
         <h1>¿Quieres ser mi San Valentín?</h1>
         <p class="dedicatoria">Para el amor de mi vida, con todo el cariño y amor de mi corazón 💖.</p>
 
-        <!-- Imágenes en línea -->
+        <!-- Imágenes 4, 1 y 5 en línea -->
         <div>
             <img src="Imagenes/Imagen-4.jpg" class="imagen-centrada" alt="Imagen 4">
             <img src="Imagenes/Imagen-1.jpg" class="imagen-centrada" alt="Imagen 1">
@@ -141,10 +161,18 @@
         </div>
 
         <!-- Gifs en las esquinas -->
-        <img src="Imagenes/Gif-1.gif" class="gifs" style="position: absolute; top: 10px; left: 10px;" alt="Gif 1">
-        <img src="Imagenes/Gif-2.gif" class="gifs" style="position: absolute; top: 10px; right: 10px;" alt="Gif 2">
-        <img src="Imagenes/Gif-3.gif" class="gifs" style="position: absolute; bottom: 10px; left: 10px;" alt="Gif 3">
-        <img src="Imagenes/Gif-4.gif" class="gifs" style="position: absolute; bottom: 10px; right: 10px;" alt="Gif 4">
+        <img src="Imagenes/Gif-1.gif" class="gifs gif-top-left" alt="Gif 1">
+        <img src="Imagenes/Gif-2.gif" class="gifs gif-top-right" alt="Gif 2">
+        <img src="Imagenes/Gif-3.gif" class="gifs gif-bottom-left" alt="Gif 3">
+        <img src="Imagenes/Gif-4.gif" class="gifs gif-bottom-right" alt="Gif 4">
+
+        <!-- Imágenes distribuidas alrededor del mensaje -->
+        <img src="Imagenes/Imagen-2.jpg" class="imagen-colage" style="top: 20%; left: 5%;" alt="Imagen 2">
+        <img src="Imagenes/Imagen-3.jpg" class="imagen-colage" style="top: 20%; right: 5%;" alt="Imagen 3">
+        <img src="Imagenes/Imagen-6.jpg" class="imagen-colage" style="top: 50%; left: 10%;" alt="Imagen 6">
+        <img src="Imagenes/Imagen-7.jpg" class="imagen-colage" style="top: 50%; right: 10%;" alt="Imagen 7">
+        <img src="Imagenes/Imagen-8.jpg" class="imagen-colage" style="top: 80%; left: 15%;" alt="Imagen 8"> <!-- Ajustada -->
+        <img src="Imagenes/Imagen-9.jpg" class="imagen-colage" style="top: 80%; right: 15%;" alt="Imagen 9"> <!-- Ajustada -->
 
         <!-- Botones -->
         <div class="botones">
@@ -176,10 +204,11 @@
             const anchoVentana = window.innerWidth;
             const altoVentana = window.innerHeight;
 
-            // Limitar el movimiento para que no se salga de la pantalla
+            // Generar posiciones aleatorias dentro de los límites de la ventana
             const nuevaX = Math.random() * (anchoVentana - btnNo.offsetWidth);
             const nuevaY = Math.random() * (altoVentana - btnNo.offsetHeight);
 
+            // Aplicar las nuevas posiciones al botón
             btnNo.style.left = `${nuevaX}px`;
             btnNo.style.top = `${nuevaY}px`;
         }
@@ -192,12 +221,12 @@
         // Función para crear corazones de lluvia
         function crearCorazonesLluvia() {
             const corazonesLluvia = document.getElementById('corazonesLluvia');
-            for (let i = 0; i < 50; i++) {
+            for (let i = 0; i < 100; i++) { // Más corazones
                 const corazon = document.createElement('div');
                 corazon.className = 'corazon-lluvia';
                 corazon.innerHTML = '❤️';
                 corazon.style.left = `${Math.random() * 100}vw`;
-                corazon.style.animationDuration = `${Math.random() * 10 + 5}s`;
+                corazon.style.animationDuration = `${Math.random() * 10 + 5}s`; // Más lento
                 corazon.style.opacity = Math.random();
                 corazonesLluvia.appendChild(corazon);
             }
@@ -207,6 +236,7 @@
         function reproducirMusica() {
             const musica = document.getElementById('musica');
             musica.play().catch(() => {
+                // Si el navegador bloquea la reproducción automática, mostrar un mensaje
                 alert("Haz clic en la página para reproducir la música.");
                 document.body.addEventListener('click', () => musica.play());
             });
